tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.out
/tmp/9-billion-names-of-god-the-integer.st:5: parse error, expected ']'
